src/pages/ar-ae/v1.24.0/configuration/sso.mdx
---
title: "SSO"
metaTitle: "SSO"
metaDescription: "كيفية إعداد الدخول الموحّد (SSO) عبر SAML2."
---
import ORDynamicCode from '../../../../components/Code/ORDynamicCode';
export const initialValues = {domain: "YOUR_DOMAIN", tenantId: "TENANT_ID", tenantKey: "TENANT_KEY", port: "PORT"};
export const ignoreValues = {jumpcloud: "https://sso.jumpcloud.com"};

الدخول الموحّد (عبر SAML2) متاح فقط في إصدار OpenReplay Enterprise.

## تهيئة موفّر الهوية (IDP)

في لوحة تحكم موفّر الهوية لديك، أنشئ تطبيقًا جديدًا باسم `openreplay` (يمكنك استخدام هذه <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">الأيقونة</a>). في صفحة التهيئة، تأكّد من تعيين القيمة التالية (يُرجى التأكّد من استبدال <code>{initialValues.domain}</code> بالقيمة الصحيحة، مثال `https://openreplay.mycompany.com`):

| المتغيّر | القيمة |
|----------|-------------|
| ACS URL (تُسمّى أيضًا Single Sign On URL أو Consumer URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code> |
| Entity ID (يُسمّى أيضًا Audience) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code> |
| Single Logout URL (تُسمّى أيضًا SLO URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code> (اختياري) |
| Name ID (يكون أحيانًا قابلاً للتهيئة في قسم 'Attribute Statements' أو 'Parameters') | `Email` أو `EmailAddress` أو `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`، حسب موفّر الهوية لديك |
| SAML initiator | عيّنه إلى `Service Provider` (اختياري) |

في قسم 'Attribute Statements' أو 'Parameters'، يُرجى التأكّد من تعريف الحقول التالية:

| الحقل | القيمة |
|----------|-------------|
| tenantKey | <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> يمكن العثور على قيمته في لوحة التحكم، ضمن 'Preferences' > 'Account' (يجب عدم إضافة هذه السمة إذا كنت تستخدم خطة Cloud Dedicated لدينا) |
| firstName | `user.firstName` |
| lastName |  `user.lastName` |
| internalId | المعرّف الداخلي أو `user.email` (معرّف المستخدم في نظام إدارة الهوية لديك) (اختياري) |
| groups | يمثّل دور المستخدم وامتياز المسؤول في OpenReplay، وحسب موفّر الهوية لديك قد يكون `user.role` أو `group`، إلخ. (اختياري، الافتراضي = `member` دون امتياز المسؤول). ولتبسيط إدارة أدوار OpenReplay من جهة موفّر الهوية، يمكنك إنشاء مجموعة باسم OpenReplay-admin تضع فيها المستخدمين أصحاب امتياز المسؤول، ومجموعة باسم OpenReplay-member تضع فيها المستخدمين الذين لديهم الدور 'member' |

من المفترض الآن أن تكون لديك جميع القيم المطلوبة للخطوة/القسم التالي.

## تهيئة الدخول الموحّد (SSO) (SAML2)

إذا كنت تستخدم خطة Cloud Dedicated لدينا، فانتقل إلى [الكونسول](https://console.openreplay.com) ثم انقر على المثيل وعيّن المتغيّرات ضمن قسم SSO.

وإلا، إذا كنت تشغّل إصدار Enterprise لدينا، فشغّل `openreplay -e` وأزل التعليق ثم حدّث متغيّرات البيئة أدناه في قسم `chalice`:

| المتغيّر | الوصف |
|----------|-------------|
| idp_entityId | قيمة `entityId` الخاصة بموفّر الهوية لديك، ويُشار إليها أيضًا بـ `Issuer URL` |
| idp_sso_url | قيمة `singleSignOnService` الخاصة بموفّر الهوية لديك، ويُشار إليها أيضًا بـ `SAML 2.0 Endpoint (HTTP)` |
| idp_x509cert | قيمة `x509cert`، يجب أن تكون سلسلة نصية في سطر واحد، دون فواصل أسطر. يمكنك استخدام <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">هذه الأداة</a> لتنسيق قيمتك |
| idp_name | اسم موفّر الهوية (اختياري) |
| idp_sls_url | قيمة `singleLogoutService` الخاصة بموفّر الهوية لديك، ويُشار إليها أيضًا بـ `SLO Endpoint (HTTP)` (اختياري) |
| enforce_SSO | إذا عُيّنت إلى `true`، فسيتم حظر جميع الاتصالات باسم المستخدم وكلمة المرور (اختياري، الافتراضي=`false`) |
| idp_group_prefixes | بادئات اسم مجموعة موفّر الهوية (اختياري، الافتراضي=`OpenReplay-,or-`) |

ثم احفظ واخرج باستخدام `:wq` لكي تدخل التغييرات حيّز التنفيذ:

## شهادة OpenReplay

هذا اختياري، يمكنك إضافة شهادة x509 لمزيد من أمان الدخول الموحّد:

1. شغّل هذا الأمر على خادمك أو على جهازك الآمن (يمكنك تغيير مدة صلاحية شهادتك حسب احتياجاتك):
```bash
openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout openreplay-sso.key -out openreplay-sso.crt
```
2. على خادمك، شغّل `openreplay -e`
3. ضمن قسم `chalice`، أضِف متغيّرات البيئة التالية:
- **sp_crt**: يجب أن تكون سلسلة نصية في سطر واحد، دون فواصل أسطر، من ملف 'openreplay-sso.crt' الذي تم إنشاؤه (يمكنك استخدام <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">هذه الأداة</a> لتنسيق قيمتك)
- **sp_key**: يجب أن تكون سلسلة نصية في سطر واحد، دون فواصل أسطر، من ملف 'openreplay-sso.key' الذي تم إنشاؤه
4. احفظ واخرج باستخدام `:wq` لكي تدخل التغييرات حيّز التنفيذ
5. أضِف ملف 'openreplay-sso.crt' الذي تم إنشاؤه إلى تهيئة تطبيق موفّر الهوية لديك

## مثال باستخدام Okta

1. سجّل الدخول إلى لوحة إدارة Okta وانتقل إلى 'Applications' > 'Applications'
2. اضغط على 'Create new app integration'، ثم اختر SAML 2.0 واضغط على 'Next'
3. عيّن 'App Name' إلى OpenReplay (يمكنك رفع هذه <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">الأيقونة</a>) لتطبيقك) ثم اضغط على 'Next'
4. عيّن:
 - **Single sign on URL** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Audience URI (SP Entity ID)** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** إلى `EmailAddress`
5. عرّف الحقول أدناه في 'Attribute Statements':
 - **tenantKey**: التنسيق `Basic` وعيّن القيمة إلى <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>، الموجودة في لوحة تحكم OpenReplay ضمن 'Preferences' > 'Account' (يجب عدم إضافة هذه السمة إذا كنت تستخدم خطة Cloud Dedicated لدينا)
 - **firstName**: التنسيق `Basic` وعيّن القيمة إلى `user.firstName`
 - **lastName**: التنسيق `Basic` وعيّن القيمة إلى `user.lastName`
 - **internalId**: التنسيق `Basic` وعيّن القيمة إلى `user.email`
6. عرّف الحقل أدناه في 'Group Attribute Statement':
 - **groups**: التنسيق `Basic`، المرشّح `Match Regex`، القيمة `OpenReplay-*` (أو يمكنك تحديد مرشّح وتعبير منتظم مختلف حسب احتياجاتك)
7. اضغط على Next، اختر 'I'm an Okta customer adding an internal app' و 'This is an internal app that we have created' ثم اضغط على 'Finish'
8. في علامة التبويب Sign On، مرّر للأسفل واضغط على 'View Setup Instructions' لرؤية تهيئة SAML2 الخاصة بك

إذا كنت تستخدم خطة Cloud Dedicated لدينا، فانتقل إلى [الكونسول](https://console.openreplay.com) ثم انقر على المثيل وعيّن المتغيّرات ضمن قسم SSO.

وإلا، إذا كنت تشغّل إصدار Enterprise لدينا:

9.  اتصل عبر SSH بتثبيت OpenReplay لديك وشغّل `openreplay -e`
10.  ضمن قسم `chalice`، أزل التعليق ثم عيّن متغيّرات البيئة التالية:
   - **idp_entityId**: Identity Provider Issuer
   - **idp_sso_url**: Identity Provider Single Sign-On URL
   - **idp_x509cert**: شهادة X.509، يجب أن تكون سلسلة نصية في سطر واحد، دون فواصل أسطر (يمكنك استخدام <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">هذه الأداة</a> لتنسيق قيمتك)
   - **idp_name**: Okta
11.  أخيرًا، احفظ واخرج باستخدام `:wq` لكي تدخل التغييرات حيّز التنفيذ

## مثال باستخدام Azure Active Directory

1. سجّل الدخول إلى بوابة Azure وانتقل إلى 'Azure Active Directory'
2. اضغط على '+ Add'، اختر 'Enterprise application' ثم انقر على 'Create your own application'
3. عيّن 'App Name' إلى OpenReplay ثم اختر 'Integrate any other application you don't find in the gallery (Non-gallery)' واضغط على 'Create'
4. انتقل إلى 'Single sign-on' في القائمة الجانبية اليسرى وعيّن القيم أدناه في كتلة 'Basic SAML Configuration':
 - **Identifier (Entity ID)** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Reply URL (Assertion Consumer Service URL)** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Logout URL** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code>
5. أضِف الـ claims أدناه في كتلة 'Attribute & Claims' وتأكّد من ترك حقل 'Namespace' فارغًا لكلٍّ منها:
 - **tenantKey**: عيّن القيمة إلى <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>، الموجودة في لوحة تحكم OpenReplay ضمن 'Preferences' > 'Account' (يجب عدم إضافة هذه السمة/الـ claim إذا كنت تستخدم خطة Cloud Dedicated لدينا)
 - **firstName**: عيّن القيمة إلى `user.givenname`
 - **lastName**: عيّن القيمة إلى `user.surname`
 - **internalId**: عيّن القيمة إلى `user.mail`
6. انتقل إلى 'Users and groups' وعيّن المستخدمين الذين تختارهم للتطبيق

إذا كنت تستخدم خطة Cloud Dedicated لدينا، فانتقل إلى [الكونسول](https://console.openreplay.com) ثم انقر على المثيل وعيّن المتغيّرات ضمن قسم SSO (توجد القيم في 'Azure Active Directory' > 'OpenReplay' > 'Single sign-on').

وإلا، إذا كنت تشغّل إصدار Enterprise لدينا:

7. اتصل عبر SSH بتثبيت OpenReplay لديك وشغّل `openreplay -e`
8. ضمن قسم `chalice`، أزل التعليق ثم عيّن متغيّرات البيئة التالية (توجد القيم في 'Azure Active Directory' > 'OpenReplay' > 'Single sign-on'):
- **idp_entityId**: Azure AD Identifier
- **idp_sso_url**: Login URL
- **idp_sls_url**: Logout URL
- **idp_x509cert**: شهادة X.509، يجب أن تكون سلسلة نصية في سطر واحد، دون فواصل أسطر (يمكنك استخدام <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">هذه الأداة</a> لتنسيق قيمتك)
- **idp_name**: Active Directory
9.  أخيرًا، احفظ واخرج باستخدام `:wq` لكي تدخل التغييرات حيّز التنفيذ

## مثال باستخدام Google Workspace (المعروف سابقًا بـ G Suite)

#### إضافة سمات مخصّصة:

1. في وحدة تحكم Google Admin، انتقل إلى 'Directory' > 'Users' > 'More options' > 'Manage custom attributes'.
2. انقر على 'Add Custom Attribute'.
3. عيّن الحقول التالية:
 - **Category**: 'OpenReplay'
 - **Custom fields**:
- **Name**: 'role'
- **Info type**: 'Text'
- **Visibility**: 'Visible to user and admin'
- **No. of values**: 'Single-value'
 - **Custom fields**:
- **Name**: 'adminPrivileges'
- **Info type**: 'Yes or No'
- **Visibility**: 'Visible to user and admin'
- **No. of values**: 'Single-value'
4. انقر على 'Add'
5. لإضافة قيم إلى السمات المخصّصة الجديدة، انتقل إلى 'Users'
6. اختر المستخدم (المستخدمين) المطلوب
7. انقر على 'User information' ثم عدّل قسم 'OpenReplay'
8. غيّر قيمة **role** إلى الدور المطلوب في 'OpenReplay' (يجب أن يطابق الدور الدور الذي تم إنشاؤه في لوحة تحكم OpenReplay ضمن 'Preferences' > 'Roles')
9. غيّر قيمة **adminPrivileges** إلى 'Yes' إذا كان مسموحًا للمستخدم بامتلاك امتيازات المسؤول في OpenReplay
10. انقر على 'Save'

#### التهيئة:

1. سجّل الدخول إلى وحدة تحكم Google Admin وانتقل إلى 'Apps'
2. اضغط على 'Web and mobile apps' ثم انقر على 'Add app' > 'Add custom SAML app'
3. عيّن 'App name' إلى OpenReplay (يمكنك رفع هذه <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">الأيقونة</a> لـ 'App icon'') ثم اضغط على 'Continue'
4. انسخ 'SSO URL' و 'Entity ID' و 'Certificate' ثم انقر على 'Continue' (سنستخدم هذه القيم في الخطوة 11)
5. عيّن:
 - **ACS URL** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/>/</code> (<code>{initialValues.tenantKey}</code> موجودة في لوحة تحكم OpenReplay ضمن 'Preferences' > 'Account'، ولكن إذا كنت تستخدم خطة Cloud Dedicated لدينا، فاترك قيمة tenantKey فارغة)
 - **Entity ID** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** إلى `Email`
 - **Name ID** إلى `Basic information > Primary Email`
6. انقر على 'Continue' ثم اضغط على 'Add Mapping' لإضافة السمات أدناه:
 - `Basic information > First Name` -> **firstName**
 - `Basic information > Last Name` -> **lastName**
 - `Basic information > Primary Email` -> **internalId**
 - `OpenReplay > groups` -> **groups**
7. انقر على 'Finish'
8.  في وحدة تحكم Google Admin، انتقل إلى 'Apps' > 'Web and mobile apps' واختر 'OpenReplay'
9.  انقر على 'User access'، اختر 'ON for everyone' ثم اضغط على 'Save'

إذا كنت تستخدم خطة Cloud Dedicated لدينا، فانتقل إلى [الكونسول](https://console.openreplay.com) ثم انقر على المثيل وعيّن المتغيّرات ضمن قسم SSO.

وإلا، إذا كنت تشغّل إصدار Enterprise لدينا:

10. اتصل عبر SSH بتثبيت OpenReplay لديك وشغّل `openreplay -e`
11. ضمن قسم `chalice > env`، أزل التعليق وعيّن السمات التالية باستخدام القيم من الخطوة 4:
   - **idp_sso_url**: الصق قيمة 'SSO URL'
   - **idp_entityId**: الصق قيمة 'Entity ID'
   - **idp_x509cert**: استخدم <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">هذه الأداة</a> لتنسيق الشهادة المنسوخة/المنزّلة
   - **idp_name**: عيّن القيمة إلى `G-Suite`
   - **idp_tenantKey**: <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> موجودة في لوحة تحكم OpenReplay ضمن 'Preferences' > 'Account'
12. أخيرًا، احفظ واخرج باستخدام `:wq` لكي تدخل التغييرات حيّز التنفيذ

## مثال باستخدام JumpCloud

1. سجّل الدخول إلى لوحة إدارة JumpCloud وفي القائمة اليسرى، انتقل إلى 'SSO'
2. اضغط على '+ Add New Application'، ثم اختر 'Custom SAML App'
3. عيّن 'Display Label' إلى OpenReplay (يمكنك رفع هذه <a href="https://docs.openreplay.com/static/OpenReplay150x150.png" target="_blank">الأيقونة</a> لتطبيقك) ثم انتقل إلى علامة التبويب 'SSO'
4. عيّن:
- **IdP Entity ID** إلى <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> (<code>{initialValues.tenantKey}</code> موجودة في لوحة تحكم OpenReplay ضمن 'Preferences' > 'Account'، ولكن إذا كنت تستخدم خطة Cloud Dedicated لدينا، فاترك قيمة tenantKey فارغة)
- **SP Entity ID** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
- **ACS URL** إلى <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
- **SAMLSubject NameID** إلى `email`
- **SAMLSubject NameID Format:** إلى `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`
- **Signature Algorithm** إلى `RSA-SHA256`
- حدّد **Sign Assertion**
- **IDP URL** بحيث ينتهي بـ <code>openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> (لا يمكن تغيير هذه القيمة لاحقًا، وإذا كنت تستخدم خطة Cloud Dedicated لدينا، فاترك جزء tenantKey فارغًا)
5. إذا اتّبعت تعليمات <a href="#openreplay-certificate">شهادة OpenReplay</a>، فيمكنك رفع ملف 'openreplay-sso.crt' الذي تم إنشاؤه بالضغط على 'Upload SP Certificate'، وإلا فتجاهل هذه الخطوة
6. عرّف الحقول أدناه في 'USER ATTRIBUTE MAPPING' بالضغط على زر 'add attribute':
- **firstName**: عيّن القيمة إلى `firstname`
- **lastName**: عيّن القيمة إلى `lastname`
- **internalId**: عيّن القيمة إلى `email`
- **groups**: اختياري، دور المستخدم وامتياز المسؤول في OpenReplay، فإذا كانت قيمة ثابتة لجميع المستخدمين، فينبغي تعريفها في الخطوة التالية، وإلا فعليك إضافة سمة نصية جديدة إلى مجموعة JumpCloud، وتسميتها `OpenReplay-groups` وتعيين القيمة إلى اسم الدور، ثم في تهيئة SSO، اختر 'Custom User or Group Attribute' وعيّن القيمة إلى `OpenReplay-groups`.
7. عرّف الحقول أدناه في 'CONSTANT ATTRIBUTES' بالضغط على زر 'add attribute':
- **tenantKey**: عيّن القيمة إلى <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>، الموجودة في لوحة تحكم OpenReplay ضمن 'Preferences' > 'Account' (يجب عدم إضافة هذه السمة إذا كنت تستخدم خطة Cloud Dedicated لدينا)
- **groups**: اختياري، تجاهله إذا تم تعريفه في الخطوة السابقة، دور المستخدم وامتياز المسؤول في OpenReplay، ويجب أن يطابق اسم الدور المعرَّف مسبقًا في OpenReplay (الافتراضي = `member` دون امتياز المسؤول)
8. في هذه المرحلة، يمكنك الانتقال إلى علامة التبويب 'User Groups'، واختيار مجموعة المستخدمين الذين سيكون لديهم وصول إلى OpenReplay، أو يمكنك القيام بذلك لاحقًا
9. اضغط على 'activate' و 'continue' في النافذة المنبثقة للتأكيد
10. اضغط على أيقونة تطبيق OpenReplay الجديد، ثم في القائمة المنسدلة اليسرى 'IDP Certificate Valid' اختر 'Download certificate'

إذا كنت تستخدم خطة Cloud Dedicated لدينا، فانتقل إلى [الكونسول](https://console.openreplay.com) ثم انقر على المثيل وعيّن المتغيّرات ضمن قسم SSO.

وإلا، إذا كنت تشغّل إصدار Enterprise لدينا:

11. اتصل عبر SSH بتثبيت OpenReplay لديك وشغّل `openreplay -e`
12. ضمن قسم `chalice`، أزل التعليق ثم عيّن متغيّرات البيئة التالية:
- **idp_entityId**: <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_sso_url**: <code>{ignoreValues.jumpcloud}/saml2/openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_x509cert**: الشهادة المنزّلة، يجب أن تكون سلسلة نصية في سطر واحد، دون فواصل أسطر (يمكنك استخدام <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">هذه الأداة</a> لتنسيق قيمتك)
- **idp_name**: JumpCloud
13.  أخيرًا، احفظ واخرج باستخدام `:wq` لكي تدخل التغييرات حيّز التنفيذ

## توفير الهويات عبر SCIM (System for Cross-domain Identity Management)

يدعم Openreplay خيار توفير هويات المستخدمين في إصدار Enterprise.

للتكامل مع خدمة SCIM في Openreplay، ما عليك سوى تفعيل توفير SCIM في لوحة تحكم موفّر الهوية لديك. يُرجى التأكّد من تعيين القيم التالية لتحقيق تكامل سلس:

| المتغيّر | الوصف |
|----------|-------------|
| SCIM connector base URL | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/ |
| User unique identifier field name | `email` |
| Support provisioning actions | Push new users, Push profile updates, Push groups |
| Authentication mode | OAuth2 |
| Access token endpoint | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/token/ |
| Authorization endpoint | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/authorize/ |
| Client id | <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> يمكن العثور على قيمته في لوحة التحكم، ضمن 'Preferences' > 'Account' |
| Client secret | يمكن العثور على قيمته بتنفيذ هذا الاستعلام في قاعدة بيانات Postgres لديك: <code>SELECT tenant_secret FROM tenants WHERE tenant_key = '<code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>';</code> |

بعد تعيين هذه القيم، اتّبع التعليمات في لوحة تحكم موفّر الهوية لديك من أجل اختبار التكامل والترخيص للتطبيق.

{/*
Openreplay requires custom attributes to be used in order to properly setup users and groups with valid projects and permissions. You will need to add the following attributes in your Identity Provider dashboard:
- `projectKeys`. This attribute if of type `string array` and added to the user schema, though it will be controlled by the group resource. You will find all of the possible values of this attribute in the 'Projects' page of Openreplay's application.
- `permissions`. This attribute if of type `string array` and added to the user schema, though it will be controlled by the group resource. The possible values of this attribute are listed below:
- SESSION_REPLAY
- DEV_TOOLS
- METRICS
- ASSIST_LIVE
- ASSIST_CALL
- SPOT
- SPOT_PUBLIC
*/}

بعد ذلك، ستتمكّن من توفير هويات المستخدمين باستخدام Openreplay كموفّر خدمة SCIM.

> **ملاحظة:** بينما يعمل Openreplay كموفّر خدمة SCIM، فإنه لا يدعم تقسيم المستخدمين إلى مجموعات متعدّدة (أي أن كل مستخدم لا يمكن أن ينتمي إلا إلى مجموعة واحدة). وإذا لم يُراعَ ذلك، فقد يُعيَّن المستخدم إلى عدد أقل أو أكثر من المشاريع مما هو متوقّع وقد يكون لديه عدد أقل أو أكثر من الأذونات في تطبيق Openreplay.

### مثال باستخدام Okta

في تطبيق SAML 2.0 لديك، نفّذ ما يلي

#### إضافة توفير SCIM

1. انقر على علامة التبويب **General**
2. في قسم **App Settings**، انقر على **Edit**
3. في حقل **Provisioning**، اختر **SCIM**، وانقر على **Save**

#### اختيار خيارات التوفير

1. انقر على علامة التبويب **Provisioning**. تظهر إعدادات اتصال SCIM ضمن **Settings > Integration**.
2. في **Settings > Integration**، انقر على **Edit**.
3. حدّد **SCIM connector base URL** واسم حقل المعرّف الفريد لمستخدميك المذكورين أعلاه.
4. ضمن **Supported provisioning actions**، اختر إجراءات التوفير المذكورة أعلاه.
5. عيّن القائمة المنسدلة **Authentication Mode** إلى القيمة المذكورة أعلاه.
6. عيّن **Access token endpoint** و **Authorization endpoint** و **Client id** و **Client secret** كما هو مذكور أعلاه.
7. انقر على **Save**.
8. انقر على **Authentiate application**.
9. في علامة التبويب **Provisioning**، انقر على **To App**.
10. انقر على **Edit**، فعّل `Create Users` و `Update User Attributes` و `Deactivate Users` واحفظ التغييرات.
- قبل بدء الخطوة التالية، نوصي بإنشاء مجموعات جديدة في Okta، تُسمّى `OpenReplay-admin` حيث تُدرج المستخدمين الذين لديهم امتياز المسؤول في OpenReplay، و `OpenReplay-members` حيث تُدرج المستخدمين الذين لديهم الدور `member` في OpenReplay، ...    
11. انتقل إلى علامة التبويب **Push Groups**، انقر على **+ Push Groups** (بالاسم أو بالقاعدة)، اختر المجموعة التي تريد دفعها إلى OpenReplay، واضغط على **save**
- في هذه المرحلة، تمثّل المجموعات المدفوعة الأدوار وامتياز المسؤول في OpenReplay، ولا تحتوي على قائمة المستخدمين الذين تم توفيرهم لـ OpenReplay.
12. انتقل إلى علامة التبويب **Assignmets**، وأضِف المستخدمين بالطريقة التي تناسبك (باستخدام الأشخاص أو المجموعات)

{/*
#### Add extra attributes

You will need to add the attributes mentioned above.

1. Click the **Provisioning** tab.
2. In **Settings > To App**, scroll down and click **Add attribute**.

For `projectKeys`, use the following.

| Variable | Description |
|----------|-------------|
| Data type | string array |
| Variable name | projectKeys |
| External name | projectKeys |
| External namespace | urn:ietf:params:scim:schemas:extension:openreplay:2.0:User |
| Enum | checked |
| Attribute members | Use the values of the project names for the **Display name** and project keys as the **Value**. You will find these in the 'Projects' page of Openreplay's application |
| Attribute type | Group |
| Group priority | Use group priority |

For `permissions`, use the following.

| Variable | Description |
|----------|-------------|
| Data type | string array |
| Variable name | permissions |
| External name | permissions |
| External namespace | urn:ietf:params:scim:schemas:extension:openreplay:2.0:User |
| Enum | checked |
| Attribute members | Use the values outlined above for the **Display name** and **Value** |
| Attribute type | Group |
| Group priority | Use group priority |
*/}
## الأخطاء

### تم استلام الاستجابة على http بدلاً من https

هذا أمر شائع جدًّا، ويعود إلى عدم وجود ترويسة 'X-Forwarded-Proto' في الطلب. ولحل ذلك، تأكّد من أن موزّع الحمل (Load Balancer) يُمرّر الترويسة بشكل صحيح إلى الواجهة الخلفية لـ OpenReplay، وشغّل `openreplay -e`، وضمن قسم `ingress-nginx > config`، أزل التعليق عن السطر `use-forwarded-headers: true`.
